@@ -1,3 +1,11 @@
+2022-10-07T08:26:20Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3203327491
+* notice: last 14d: unq all: 3 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 102 146 / 109 153
+* notice: next accum: outdated-unq outdated-all / unq all: 103 147 / 109 153
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-23] / []
+
 2022-10-06T08:27:15Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3195669785
 * notice: last 14d: unq all: 3 7
